--- a/app/src/main/res/layout/dialog_music_error.xml
+++ b/app/src/main/res/layout/dialog_music_error.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/colorAccent"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Error" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/colorAccent"
+        android:text="Error"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Custom audio not found!" />
+        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@color/colorAccent"
+        android:text="Custom audio not found!\nDefault audio chosen."
+        android:textColor="@color/colorPrimaryDark" />
 </LinearLayout>
